Rigid Objects are frozen after copy. #63828

Closed
opened 2019-04-23 16:08:57 +02:00 by Stefan · 6 comments

System Information
Operating system: WIN 10
Graphics card: AMD

Blender Version
Broken: blender-2.80.0-git.c9ed39925a51-windows64

Short description of error
Rigid Objects are frozen after copy.

Exact steps for others to reproduce the error

  • Open new project,
  • give the "cube" rigid physics
  • Copy it
  • Physics on copies not working
**System Information** Operating system: WIN 10 Graphics card: AMD **Blender Version** Broken: blender-2.80.0-git.c9ed39925a51-windows64 **Short description of error** Rigid Objects are frozen after copy. **Exact steps for others to reproduce the error** - Open new project, - give the "cube" rigid physics - Copy it - Physics on copies not working
Author

Added subscriber: @EvilReFlex

Added subscriber: @EvilReFlex

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Brecht Van Lommel was assigned by Sebastian Parborg 2019-04-25 17:59:38 +02:00

Instead of all object losing their rigid bodies (#63576), the copies still have the settings but they do not animate.

I have to remove and re-add the rigid body for it to start simulating again it seems.

Instead of all object losing their rigid bodies (#63576), the copies still have the settings but they do not animate. I have to remove and re-add the rigid body for it to start simulating again it seems.
Author

The problem still occurs in "blender-2.80.0-git.8f1951f555f5-windows64".
Added a sample file that shows the problem:
rigittest.blend

The problem still occurs in "blender-2.80.0-git.8f1951f555f5-windows64". Added a sample file that shows the problem: [rigittest.blend](https://archive.blender.org/developer/F7020157/rigittest.blend)

This issue was referenced by a5ff780065

This issue was referenced by a5ff780065bf6768811bf459953a1a1eabe989c1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63828
No description provided.